# Python_Ciencia_Dados

./: Pypi.pypirc  README.md  README_.txt  converter_script.txt  pyproject.toml  setup.py
vtr_csv_json_converter/: __init__.py  converter.py
vtr_csv_json_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
