[tool.poetry]
name = "vtr_csv_json_converter"
version = "0.2.0"
description = "Conversor csv para json. Publicação apenas para fins de aprendizagem na PUC. Classe DS."
authors = ["Victor de Oliveira Rodrigues <victor.o.rodrigues11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.6"
click = "^8.0.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"
pandas-stubs = "^1.2.0"
ipython = "^7.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
csv_converter = 'vtr_csv_json_converter.converter:converter'


[tool.black]
line-length = 99

[tool.isort]
profile = "black"



